# SPCG

./: README.md
cpu_src/: CMakeLists.txt  main.cpp  same_matrix_precond.cpp
gpu_src/ilu0_gpu/nonsp/: main.cpp  mmio_wrapper.h
gpu_src/ilu0_gpu/sp/: CMakeLists.txt  main.cpp  util.h
gpu_src/iluk_gpu/: CMakeLists.txt  main.cpp
script_src/matlab_scripts/: matrix_sparsification.m  matrix_sparsification_analysis.m
script_src/matlab_scripts/matrix_market/: mmread.m  mmwrite.m  plot_lower_triangular_spy.m
script_src/python_scripts/algorithm/: alg_cpu.py  alg_ilu0.py  alg_iluk.py
script_src/python_scripts/collect_data/: application_get.py  aprx_cond_num.py  compute_cpu_speedups.py  compute_ilu0_speedups.py  compute_iluk_speedups.py  compute_wavefronts.py
script_src/python_scripts/plot/: correlation_ilu0_updated.py  correlation_iluk_updated.py  generate_all_results.py  generate_summary_tables.py  histogram_plots.py  ilu0_application_speedup.py  ilu0_factorization_speedup.py
script_src/python_scripts/prep/: matrix_download.py
script_src/python_scripts/prep/iluk_factorization/: combine_timing.py  flop_model.py  iluk_factorize.py
